--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "astro-icon": "^1.1.4"
   },
   "dependencies": {
+    "@iconify-json/mdi": "^1.2.3",
     "@tailwindcss/vite": "^4.0.15",
+    "@types/micromodal": "^0.3.5",
     "astro": "^5.5.4",
-    "tailwindcss": "^4.0.15"
+    "astro-icon": "^1.1.5",
+    "micromodal": "^0.4.10",
+    "tailwindcss": "^4.0.15",
+    "tiny-invariant": "^1.3.3"
   }
 }
