--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro-icon": "^1.1.4"
   },
   "dependencies": {
+    "@astrojs/vercel": "^8.1.3",
     "@iconify-json/mdi": "^1.2.3",
     "@tailwindcss/vite": "^4.0.15",
     "@types/micromodal": "^0.3.5",
